[package]
name = "devo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.2"
serde = {version="1.0.136", features = ["derive"]}
tempfile = "3"
reqwest = "0.11.22"
tokio = { version = "1", features = ["full"] }
